<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.osw.quizmaker.CreateMPActivity">

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/question"
        />
    <EditText
        android:id="@+id/option_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/option_1"/>

    <EditText
        android:id="@+id/option_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/option_2"
        />

    <EditText
        android:id="@+id/option_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/option_3"/>

    <EditText
        android:id="@+id/option_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/option_4"/>

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        />

</LinearLayout>
