<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.osw.quizmaker.CreateTFActivity">

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/question"
        />
    <RadioButton
        android:id="@+id/option_true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trueButton"
        />
    <RadioButton
        android:id="@+id/option_false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/falseButton"
        />
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        />

</LinearLayout>
